crates/daemon/tests/snapshots/cli_help__cli_help_records_show.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
One record with every field and where it came from

Usage: mxr records show [OPTIONS] <RECORD_ID>

Arguments:
  <RECORD_ID>

Options:
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
