crates/daemon/tests/snapshots/cli_help__cli_help_remind.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Set or cancel a follow-up reminder on an outbound message. Reminders fire if no reply has arrived by the given time — surfacing the message back to the user as a follow-up

Usage: mxr remind [OPTIONS] <MESSAGE_ID>

Arguments:
  <MESSAGE_ID>

Options:
      --account <ACCOUNT>
      --when <WHEN>        When to fire the reminder. Same forms accepted by `mxr snooze --until`: `in 2h`, `in 5d`, `tomorrow 9am`, `monday 17:00`, RFC3339
      --cancel             Cancel an existing reminder on this message
  -h, --help               Print help
