crates/daemon/tests/snapshots/cli_help__cli_help_replies.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 13
expression: stdout
---
Manage the reply-later queue

Usage: mxr replies [OPTIONS] [COMMAND]

Commands:
  list    List messages flagged for reply-later (default if no subcommand given)
  add     Mark a message for reply-later
  remove  Clear the reply-later flag on a message
  help    Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
