crates/daemon/tests/snapshots/cli_help__cli_help_replies_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List messages flagged for reply-later (default if no subcommand given)

Usage: mxr replies list

Options:
  -h, --help  Print help
