crates/daemon/tests/snapshots/cli_help__cli_help_replies_remove.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Clear the reply-later flag on a message

Usage: mxr replies remove <MESSAGE_ID>

Arguments:
  <MESSAGE_ID>

Options:
  -h, --help  Print help
