crates/daemon/tests/snapshots/cli_help__cli_help_reply_all.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Reply to all recipients

Usage: mxr reply-all [OPTIONS] <MESSAGE_ID>

Arguments:
  <MESSAGE_ID>  Message ID to reply to

Options:
      --account <ACCOUNT>
      --from <FROM>            Send from this owned address (the account primary or a registered alias). Defaults to the address the original was delivered to
      --body <BODY>            Inline reply body
      --body-stdin             Read body from stdin
      --attach <ATTACH>        File path to attach (repeatable)
      --signature <SIGNATURE>  Insert this signature by name instead of the scoped default
      --no-signature           Do not insert any signature
      --yes                    Skip confirmation
      --draft                  Save as a draft instead of sending. Never transmits; the reply lands in `mxr drafts` (threaded, ready to send with `mxr send <draft-id>`). Mutually exclusive with `--yes`, so no added flag can turn a draft into a send
      --dry-run                Show what would be sent
      --remind-after <TIME>    After sending, remind if no reply has arrived by this time. Same forms as `mxr remind --when`: `in 2h`, `tomorrow 9am`, `monday 17:00`, RFC3339
      --format <FORMAT>        [possible values: table, json, jsonl, csv, ids]
  -h, --help                   Print help
