crates/daemon/tests/snapshots/cli_help__cli_help_response_time.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Reply-latency percentiles (clock + business-hours) per direction

Usage: mxr response-time [OPTIONS]

Options:
      --theirs                       Measure their reply time to my outbound (`they_replied`). Default is mine: how long I take to reply to inbound messages
      --counterparty <COUNTERPARTY>  Restrict to a single counterparty by email
      --since-days <SINCE_DAYS>      Restrict to reply pairs from the last N days
      --account <ACCOUNT>
      --format <FORMAT>              [possible values: table, json, jsonl, csv, ids]
  -h, --help                         Print help
