crates/daemon/tests/snapshots/cli_help__cli_help_restart.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Restart the daemon with the current binary

Usage: mxr restart

Options:
  -h, --help  Print help
