crates/daemon/tests/snapshots/cli_help__cli_help_root.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Terminal email client (pronounced "Mixer")

Usage: mxr [COMMAND]

Commands:
  daemon              Start the daemon explicitly
  restart             Restart the daemon with the current binary
  mcp                 Model Context Protocol server commands
  search              Search messages
  triage              Classify search results as ACTION/FYI/ROUTINE using the cached summarizer verdict
  count               Count matching messages
  cat                 Display a message. Pass a positional ID, pipe IDs on stdin, or resolve a list with `--search QUERY` (then `--first` for the most recent match or `--limit N` for the top N)
  thread              Display a thread. Pass a positional ID, pipe IDs on stdin, or resolve a list with `--search QUERY` (deduplicated by thread)
  threads             List threads in date-descending order. Each returned thread includes its constituent message IDs (date-ascending). Filter by account or label; paginate with --limit/--offset
  export              Export a thread or matching search results
  headers             Show message headers. Pass a positional ID, pipe IDs on stdin, or resolve a list with `--search QUERY`
  saved               Manage saved searches
  replies             Manage the reply-later queue
  summarize           Summarise an email thread using the configured LLM (Ollama, LM Studio, OpenAI, etc.). Requires `[llm] enabled = true` in config. Pass a positional thread ID or use `--search QUERY` plus `--first` (most recent match) or `--limit N` to summarize multiple threads in one go. Multi-summary output is separated by `--- THREAD_ID ---`
  draft-assist        Generate a draft reply for a thread, grounded on the thread context plus the user's instruction. Output goes to stdout — pipe it into `$EDITOR` or your scratch buffer. Never auto-sends. Two equivalent forms:
  draft               Draft a new email or refine an existing local draft with LLM assistance
  setup               First-run setup wizard for demo, Gmail, or IMAP/SMTP
  demo                Launch an isolated, realistic demo inbox without touching your real config
  screener            Triage unknown senders: classify them as allow / deny / feed / paper-trail. Local-only consent metadata; never roundtrips to the provider
  sender              Show per-sender relationship aggregates: volume, response cadence, open threads. The unfair advantage of having local SQLite — every other email tool reasons over messages, not people
  profile             Show or rebuild the inspectable relationship profile for a contact
  expert              Find people who have answered similar questions before. Either give the message id of the question OR a free-text query; the daemon ranks answerers (not askers)
  suggest-recipients  Suggest "maybe include" Cc recipients for a draft. Excludes addresses already on the draft and never reveals Bcc'd addresses from prior threads
  whois               Explain an entity (email or term) using local evidence
  briefing            Render a thread or recipient briefing, or a conversation's context
  cadence             Manage the cadence watchlist
  send-time           Show the recipient's typical reply-time bucket
  time                Preview how a time phrase resolves before using it
  decisions           List or rebuild the citation-backed decision log
  ask                 Ask a question against the local archive. Returns a citation- validated answer; the daemon rejects LLM citations that point to messages outside the retrieved set
  owed                List the replies you owe: the desk's You owe lane (mail from people in your inbox, from someone you've written to), most overdue against your usual pace with them first
  messages            People you talk with, one row each. Reply or mark done.
  now                 The few things that need you now, from every mode.
  desk                What needs you, not what arrived: replies you owe, promises coming due, threads waiting on someone, and new mail from people, each with the reason it is there. Everything else is summarised as counts
  reading             Reading: newsletters you chose, as an edition. Read when you like. Newest since your last visit first, the sources you read most on top, and nothing owed: items fade unless you keep them on Later
  paper-trail         Paper trail: receipts, notifications and other automated mail in your inbox, grouped by sender, each with the reason it is here
  sweep               Archive everything unpinned in Reading or Paper trail, or in one sender's bundle there. Preview with --dry-run, then archive with --yes; `mxr undo` reverses it
  pin                 Pin messages so a sweep leaves them where they are. Pins are local to this machine
  unpin               Unpin messages: the next sweep takes them too
  why                 Why a message is where it is: people, Reading, Paper trail or screened out, and the rule that decided it
  commitments         List, find, keep or resolve commitments: promises made in mail
  voice               Show or rebuild the account-level user voice profile
  humanize            Score or rewrite text using the deterministic humanizer gate
  snippets            Manage compose snippets (`;name` expansions)
  todo                Things email asked you to do, ordered by when to act.
  records             Receipts, orders, bookings and documents. Ask for what you need.
  modes               How each mode explains itself: its job, empty states, keys and hints
  deliveries          Track packages and deliveries detected in your mail
  signatures          Manage outgoing compose signatures
  remind              Set or cancel a follow-up reminder on an outbound message. Reminders fire if no reply has arrived by the given time — surfacing the message back to the user as a follow-up
  semantic            Manage semantic search profiles and indexing
  llm                 Inspect local/cloud LLM provider status
  chimes              Manage local notification chimes
  subscriptions       List senders with unsubscribe support
  senders             List top inbound senders by message volume
  storage             Roll up disk consumption by sender, mimetype, or label
  contacts            Surface relationship analytics from the materialized contacts table
  wrapped             Year-in-review summary: volume, time patterns, top contacts, reply discipline, storage, newsletters, superlatives. Like Spotify Wrapped but for your inbox
  response-time       Reply-latency percentiles (clock + business-hours) per direction
  stale               List stale threads waiting for a reply (mine = my turn, theirs = theirs)
  sync                Trigger or query sync. Triggering starts a sync in the daemon and returns as soon as it has started; the account keeps syncing afterwards, through the rest of a backfill and any queued tick. Use --wait to wait for the account itself to go idle
  status              Show daemon status
  web                 Start or reopen the local HTTP/WebSocket bridge and open the web app in the default browser. Runs detached by default; use `mxr web stop` to stop the detached bridge
  events              Watch daemon events
  activity            Browse the local user-activity log (the git-reflog for your inbox). Strictly local: never transmitted off-device. See `mxr activity --help`
  history             Show persisted event history
  notify              Unread summary for status bars
  logs                View daemon logs
  reset               Destroy local mxr runtime state after stopping the daemon. Preserves config.toml and credentials by default. Use --including-config to also delete config.toml. Destructive; use --dry-run to preview
  burn                Destroy local mxr runtime state after stopping the daemon. Alias for `mxr reset --hard`. Preserves config.toml and credentials by default. Use --including-config to also delete config.toml. Destructive; use --dry-run to preview
  bug-report          Generate a sanitized diagnostic bundle
  accounts            Manage accounts
  doctor              Run diagnostics
  labels              Manage labels
  rules               Manage rules
  compose             Compose a new email
  reply               Reply to a message
  reply-all           Reply to all recipients
  forward             Forward a message
  drafts              Manage drafts: list (default), show scheduled sends, recover orphaned in-flight sends, resume one for retry, edit, delete, or sync drafts with a provider
  send                Send a draft by ID
  unsend              Cancel a previously-scheduled send. The draft itself is preserved
  archive             Archive a message (remove from inbox)
  read-archive        Mark message as read and archive it
  route               Route queued messages to a target label, optionally marking read and archiving
  trash               Move message to trash
  spam                Report message as spam
  star                Star a message
  unstar              Unstar a message
  read                Mark message as read
  unread              Mark message as unread
  label               Apply a label to a message
  unlabel             Remove a label from a message
  move                Move message to a label/folder
  undo                Undo a recent destructive mutation by its id (~60s window). The mutation id is printed by `archive`, `trash`, `spam`, `mark-read`, `read-archive` and `desk done`; copy it from there
  jobs                List or inspect background jobs (large batch mutations, progress, undo ids)
  snooze              Snooze a message until a specified time
  unsnooze            Unsnooze a message
  snoozed             List snoozed messages
  unsubscribe         Unsubscribe from a mailing list
  open                Open message in browser. Pass a positional ID or `--search QUERY` (with `--first` for the latest match, or `--limit N` plus `--yes` to open many tabs at once)
  attachments         Manage message attachments
  invite              Inspect and respond to calendar invites in email
  invites             List calendar invites found in email
  config              Configuration management
  version             Show version
  completions         Generate shell completions
  help                Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
